# travelingSalesman

./: .replit  Environment.py  HillClimb.py  README.md  arrows.py  clicker.py  components.py  display.py  dual_tsp.py  events.py  hillClimb.py  main.py  pyproject.toml  replit_zip_error_log.txt  results.csv  scatterer.py  scattererer.py  tsp.py
Documents/Projetos/python/travelingSalesman-main/: Environment.py  README.md  SimulatedTempering.py  main.py  pyproject.toml
Documents/Projetos/python/travelingSalesman-main/.upm/: store.json
Documents/Projetos/python/travelingSalesman-main/velho/: events.py  menu.py  scattererer.py  tsp.py
Public/: script.js  style.css
Src/: Router.py
Src/Controller/: Execute.py
Src/Model/: Environment.py  GeneticAlgorithm  GeneticAlgorithm.py  HillClimb.py  SimulatedTempering.py
Src/View/: Home.py
Templates/: index copy.html  index.html
velho/: arrows.py  dual_tsp.py  mainer.py  surfaceStruture.py
